--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -17,7 +17,8 @@ jobs:
       with:
         type: 'tar'
         filename: 'wordpress.tar.gz'
-        exclusions: '*.git* *.github*'
+        exclusions: '*.git/* *.github/*'
+        custom: --ignore-failed-read
         
     - name: Upload Release
       uses: ncipollo/release-action@v1.12.0
