--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -3,23 +3,10 @@ on:
   push:
     tags:
       - "1.*.*"
+name: Release
 jobs:
-  build:
+  release:
+    name: Release GitHub Actions
     runs-on: ubuntu-latest
     steps:
-    - name: mkdir
-      run: mkdir wordpress
-    - uses: actions/checkout@master
-      with:
-        path: wordpress
-    - name: Archive Release
-      uses: thedoctor0/zip-release@0.7.1
-      with:
-        type: 'tar'
-        filename: 'wordpress.tar.gz'
-        
-    - name: Upload Release
-      uses: ncipollo/release-action@v1.12.0
-      with:
-        artifacts: "wordpress.tar.gz"
-        token: ${{ secrets.GT_TOKEN }}
+      - uses: technote-space/release-github-actions@v6
