--- a/.github/workflows/releases.yaml
+++ b/.github/workflows/releases.yaml
@@ -4,8 +4,20 @@ on:
     tags:
       - "1.*.*"
 jobs:
-  release:
-    name: Release GitHub Actions
+  build:
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
-      - uses: technote-space/release-github-actions@v6
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GT_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      
